--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve dist -l ${PORT:-3000}"
   },
   "dependencies": {
+    "@google/genai": "^1.34.0",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0",
-    "@google/genai": "^1.34.0"
+    "serve": "^14.2.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
